--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,90 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  /* text-align: center; */
+  width: 80%;
+  margin: auto;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #FECC02;
+  height: 60px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  color: black;
+}
+
+.Logo {
+  height: 80%;
+  width: 150px;
+}
+
+.Title {text-align: center;}
+
+.Cover {
+  height: 300px;
+  size: border-box;
+  margin:5px;
+}
+
+.Cover img {
+  height: 100%;
+}
+
+.Item { margin-left:5px;}
+
+.Label {
+  color: #B7B7B7;
+}
+
+.ItemText {
+  color: #418ECD;
+}
+
+.yellow {
+  background-color: #FECC02;
+  color: black;
+}
+
+.black {
+  background-color: black;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.grey {
+  background-color: grey;
+  color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.Subtitle {}
+
+.Description {}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+button {
+  border:none;
+  border-radius:3px;
+  size: border-box;
+  margin:5px;
+  padding:5px;
+}
+
+button:hover{
+  cursor:pointer;
+  box-shadow: 6px 7px 20px -8px rgba(0,0,0,0.78);
+}
+
+@media (max-width: 768px) {
+  .row {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+  .App {
+    text-align: center;
+    width: 90%;
   }
 }
